@@ -20,7 +20,7 @@ UI_EN = {
     UI_trait_generator = "Generator Knowledge",
     UI_trait_generatordesc = "You know how to operate a generator.",
     UI_trait_ingenuitive = "Ingenuitive",
-    UI_trait_ingenuitivedesc = "You have a knack for figuring things out.<br>You have knowledge of several crafting recipes which are otherwise profession-specific.",
+    UI_trait_ingenuitivedesc = "You have a knack for figuring things out.<br>You automatically know all recipes that would otherwise require a magazine or professional knowledge.<br>(This also includes recipes added by mods.)",
     UI_trait_olympian = "Olympian",
     UI_trait_olympiandesc = "You are or were at one point an Olympic competer whose fitness and speed are a reflection of that.<br>+1 Sprinting<br>+1 Fitness",
     UI_trait_bouncer = "Bouncer",
