@@ -15,3 +15,4 @@ Lowered amount of food given by default for Vagabond (you can change it in Sandb
 Adjusted trait costs.
 Make Weight Checks more consistent.
 Tweak Gourmand freshness effect.
+Ingenuitive now teaches all recipes.
